# pyscript-cli

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: main.yml  publish.yaml  release.yml  test.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.md  user_guide.md
src/pyscript/: __init__.py  __main__.py  _generator.py  _node_parser.py  _supported_packages.py  cli.py
src/pyscript/plugins/: __init__.py  convert_offline.py  create.py  delete.py  hookspecs.py  run.py  wrap.py
src/pyscript/templates/: basic.html  plugin.html  wrap.html
tests/: conftest.py  test_cli.py  test_generator.py  test_run_cli_cmd.py  utils.py
