[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [
  {name = "Matt Kramer", email = "mkramer@anaconda.com"},
  {name = "Fabio Pliger", email = "fpliger@anaconda.com"},
  {name = "Nicholas Tollervey", email = "ntollervey@anaconda.com"},
  {name = "Fabio Rosado", email = "frosado@anaconda.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Pre-processors"
]
dependencies = [
  'importlib-metadata; python_version<"3.8"',
  "Jinja2<3.2",
  "pluggy<1.3",
  "rich==13.4.2",
  "toml<0.11",
  "typer==0.9.0",
  "platformdirs<2.7",
  "requests<=2.31.0"
]
description = "Command Line Interface for PyScript"
keywords = ["pyscript", "cli", "pyodide", "micropython", "pyscript-cli"]
license = {text = "Apache-2.0"}
name = "pyscript"
readme = "README.md"
requires-python = ">=3.9"
version = "0.3.0"

[project.optional-dependencies]
dev = [
  "coverage<7.3",
  "mypy<=1.4.1",
  "pytest<7.5",
  "types-toml<0.11",
  "types-requests"
]
docs = [
  "Sphinx<5.2",
  "sphinx-autobuild<2021.4.0",
  "sphinx-autodoc-typehints<1.20",
  "myst-parser<0.19.3",
  "pydata-sphinx-theme<0.13.4"
]

[project.scripts]
pyscript = "pyscript.cli:app"

[project.urls]
Documentation = "https://docs.pyscript.net"
Examples = "https://pyscript.com/@examples"
Homepage = "https://pyscript.net"
Repository = "https://github.com/pyscript/pyscript-cli"
